# TTS_hub

./: .cursorignore  .gitignore  LICENSE  README.md  TTS_hub.code-workspace  desktop.ini  index.fast-work.html  index.html  package-lock.json  package.json  studios.env.example  tailwind.config.js  tsconfig.json  vite.config.ts
.cursor-hooks/: README.md  cursor-tts.ps1  hooks.json.template  tts-hub.json.example
.cursor/plans/: filtr_tryb_kroków_b467cfea.plan.md  maklowicz-skill-coordinator.plan.md  mp4-template-creator-archive.plan.md  node-audio-routing.plan.md  voice-profiles-panel.plan.md  (+1 more)
.github/: pull_request_template.md
.tmp/: mann-full-result.json  mann-short-result.json  mann-ttshub-explainer-short.json  mann-ttshub-explainer.json
docs/: API.md  CURSOR_SKILL.md  HISTORY_ICONS_BRIEF.md  LEGAL_NOTICE.md  PERSONALITY_LAYER_PLAN.md  PROJECT_GUIDELINES.md  PUBLICATION_READINESS.md  QUICK_SETUP.md  RELEASE_v0.1.0.md  SKINS.md  SPECIFICATION.md  VOICEBOX_FORK.md  VOICEBOX_FORK_PR-body.md  VOICEBOX_UPSTREAM_HEADS_UP-discussion-body.md  VOICEBOX_UPSTREAM_HEADS_UP.md  VOICEBOX_UPSTREAM_PR_DRAFT.md  VOICEBOX_UPSTREAM_SYNC.md  VOICE_WORKFLOWS.md  skin.schema.json  voiceover-brief-preset.md
public/c4d/: icon.bak  (+1 more)
scripts/: build-fast-work-bundle.ps1  build-voicebox-server.ps1  clean-build-artifacts.ps1  setup-dev-voicebox-sidecar.js  test-playback-toast.ps1  test-voicebox-contract.ps1
src/: App.tsx  appSettings.ts  audioFormats.ts  main.tsx  styles.css  ttsModels.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.fast-work.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json  fast-work.json
src-tauri/icons/: icon.icns
src-tauri/resources/fast-work/: README.md
src-tauri/src/: app_settings.rs  audio.rs  audio_output_devices.rs  avatars.rs  commands.rs  config.rs  cursor_integration.rs  db.rs  editor_quick_gen.rs  ephemeral.rs  fast_work_export.rs  global_shortcuts.rs  google.rs  http_api.rs  job_queue.rs  lib.rs  local_storage.rs  main.rs  menu.rs  minimax.rs  minimax_options.rs  minimax_subtitles.rs  paths.rs  playback_toast_window.rs  portable_paths.rs  quick_hotkeys.rs  quick_setup_window.rs  selection_capture.rs  skins.rs  state.rs  text_filters.rs  toast_window.rs  updater.rs  usage.rs  video_commands.rs  video_export.rs  video_library.rs  video_template.rs  voice_pack.rs  voice_profiles.rs  (+3 more)
src-tauri/src/chat/: commands.rs  db.rs  mod.rs  types.rs
src-tauri/src/fast_work/: commands.rs  config.rs  mod.rs  shortcuts.rs  state.rs
src-tauri/src/plugins/: lifecycle.rs  mod.rs  registry.rs  soundboard.rs  state.rs
src-tauri/src/roleplay/: commands.rs  mod.rs  project.rs  queue.rs
src-tauri/src/voicebox_server/: manager.rs  mod.rs  process.rs
voicebox-backend/: .gitignore  README.md  THIRD_PARTY_NOTICES.md  UPSTREAM.md  justfile  requirements.txt
(+492 files in other folders)
